[package]
name = "server"
version = "0.1.0"
authors = ["jmlb23 <rmmenosrf@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "api"
path = "src/lib/lib.rs"


[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = "18.0.0"